--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.4"
+    "cors": "^2.8.4",
+    "express": "^4.15.4",
+    "react": "^15.6.1"
   }
 }
