--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1"
   },
   "scripts": {
@@ -16,5 +17,7 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
-  "engines": {"node": "0.8.x"}
+  "engines": {
+    "node": "0.8.x"
+  }
 }
